# maintenance_tracker

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/ISSUE_TEMPLATE/: database-error.yml  feature-request.yml  interface-error.yml
maintenance_tracker/: Cargo.toml
maintenance_tracker/src/: main.rs
maintenance_tracker/static/: script.js  style.css
maintenance_tracker/templates/: base.html.tera
src/: core.rs  data.rs  db.rs  main.rs
static/: main.css  script.js
templates/: index.html
